# puncture-rd-agent-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
benchmarks/: README.md  artifact_registry_benchmark.py  langgraph_postgres_checkpoint_benchmark.py  tracing_overhead_benchmark.py
benchmarks/results/: v0.2.0-artifact-registry.json
benchmarks/schemas/: langgraph-postgres-checkpoint-v1.schema.json
contracts/: README.md  __init__.py  artifacts.py  common.py  domain.py  enums.py  errors.py  geometry.py  tool_inputs.py  tool_outputs.py
deploy/local-demo/: .env.example  README.md  common.sh  doctor.py  doctor.sh  run_demo.sh  serve.sh  verify.sh
deploy/qwen-vllm/: .env.example  .gitignore  README.md  compose.yaml  entrypoint.sh  gpu-sizing-worksheet.md  verification-checklist.md
deploy/rag-search/: .env.example  .gitignore  README.md  compose.yaml  entrypoint.sh
docs/: api-runtime-implementation.md  architecture.md  beginner-hands-on-tutorial.md  eval-and-tracing-implementation.md  fastapi-runtime.md  implementation-roadmap.md  integration-guide.md  langgraph-runtime-implementation.md  learning-and-interview-guide.md  mcp-tool-runtime.md  module-delegation-playbook.md  open-source-baseline.md  project-status.md  qwen-deployment-runbook.md  rag-deployment-runbook.md  technology-stack.md  terminology.md  testing-guide.md  testing-mcp.md  testing-qwen-vllm.md  testing-rag.md  versioning.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md
examples/: live_api_demo.py  live_api_server.py  live_opensearch_rag_demo.py  local_mcp_demo.py  local_mcp_stdio.py  local_rag_demo.py
graph/: README.md  data_model_subgraph.json  main_graph.json  planning_safety_subgraph.json
mocks/model_responses/: responses.json
mocks/rag/: documents.json
specs/: artifact-registry.md  eval-and-tracing.md  fastapi-gateway.md  langgraph-runtime.md  qwen-vllm-service.md  rag-service.md
specs/tools/: README.md  convert-mcs-to-nifti.md  evaluate-intraoperative-risk.md  evaluate-path-safety.md  extract-skin-surface.md  generate-candidate-paths.md  inspect-case-metadata.md  run-segmentation.md  validate-label-schema.md  validate-segmentation-result.md  verify-skin-penetration.md
src/puncture_agent/: __init__.py
tasks/: task-00-contracts-artifacts.md  task-01-qwen-vllm.md  task-02-rag-service.md  task-03-case-data-tools.md  task-04-segmentation-tools.md  task-05-planning-tools.md  task-06-langgraph-runtime.md  task-07-api-runtime.md  task-08-eval-tracing.md
tests/: __init__.py
tests/api/: __init__.py  postgres_api_sigterm_probe.py  test_fastapi_app.py  (+5 more)
(+173 files in other folders)
