[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puncture-rd-agent-platform"
version = "0.1.0"
description = "Contract-first scaffold for an internal puncture robotics R&D agent"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
implementation = [
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "langgraph>=1.0",
  "mcp>=1.0",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "opentelemetry-api>=1.27",
]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

