[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puncture-rd-agent-platform"
version = "0.5.0"
description = "Contract-first internal R&D agent with local Qwen, RAG and MCP adapters"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
implementation = [
  "pydantic>=2.7,<3",
  "fastapi>=0.115.12,<0.116",
  "uvicorn>=0.30",
  "langgraph>=1.2.9,<2",
  "langgraph-checkpoint-postgres>=3.1,<4",
  "mcp>=1.27,<2",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "opentelemetry-api>=1.27",
]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = [
  "contracts",
  "puncture_agent",
  "puncture_agent.agent",
  "puncture_agent.api",
  "puncture_agent.artifacts",
  "puncture_agent.mocks",
  "puncture_agent.model_gateway",
  "puncture_agent.mcp",
  "puncture_agent.observability",
  "puncture_agent.rag",
  "puncture_agent.runtime",
  "puncture_agent.tooling",
]
package-dir = { contracts = "contracts", puncture_agent = "src/puncture_agent" }
